--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "cirkle-website",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/rafaelfagundes/cirkle-website.git",
-  "author": "Rafael Fagundes <rafaelcflima@gmail.com>",
-  "license": "MIT",
+  "name": "learn-starter",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
-    "@types/next": "^9.0.0",
-    "@types/react": "^16.9.44",
-    "@zeit/next-typescript": "^1.1.1",
-    "next": "^9.5.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "next": "9.3.5",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   }
 }
