--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
     "@material-ui/core": "^4.11.0",
     "@types/next": "^9.0.0",
     "@types/react": "^16.9.44",
+    "@types/styled-components": "^5.1.2",
     "@zeit/next-typescript": "^1.1.1",
-    "date-fns": "^2.15.0",
-    "gray-matter": "^4.0.2",
     "next": "9.3.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "remark": "^12.0.1",
-    "remark-html": "^12.0.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
