--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@types/next": "^9.0.0",
     "@types/react": "^16.9.44",
     "@types/styled-components": "^5.1.2",
@@ -31,6 +32,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.5",
     "jest": "^26.2.2",
+    "prettier": "^2.0.5",
     "typescript": "^3.9.7"
   }
 }
