--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.44",
     "@types/styled-components": "^5.1.2",
     "@zeit/next-typescript": "^1.1.1",
+    "lodash": "^4.17.19",
     "next": "9.3.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
