--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@types/lodash": "^4.14.159",
     "@types/next": "^9.0.0",
     "@types/react": "^16.9.44",
     "@types/styled-components": "^5.1.2",
