--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,7 @@
       "plugins": [
         [
           "styled-components",
-          { "ssr": true, "displayName": true, "preprocess": false }
+          { "ssr": true, "displayName": false, "minify": true }
         ]
       ],
       "presets": ["next/babel"]
@@ -15,16 +15,10 @@
       "plugins": [
         [
           "styled-components",
-          { "ssr": true, "displayName": true, "preprocess": false }
+          { "ssr": true, "displayName": false, "minify": true }
         ]
       ],
       "presets": ["next/babel"]
     }
-  },
-  "plugins": [
-    [
-      "styled-components",
-      { "ssr": true, "displayName": true, "preprocess": false }
-    ]
-  ]
+  }
 }
