--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@types/react": "^16.9.44",
     "@types/styled-components": "^5.1.2",
     "@zeit/next-typescript": "^1.1.1",
+    "axios": "^0.19.2",
+    "isomorphic-unfetch": "^3.0.0",
+    "json-server": "^0.16.1",
     "lodash": "^4.17.19",
     "next": "9.3.5",
     "react": "16.13.1",
