--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/styled-components": "^5.1.2",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.2",
+    "firebase": "^7.18.0",
+    "firebase-admin": "^9.1.0",
     "isomorphic-unfetch": "^3.0.0",
     "json-server": "^0.16.1",
     "lodash": "^4.17.19",
