--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.19",
     "next": "9.3.5",
     "react": "16.13.1",
+    "react-cloudinary": "^0.4.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.1"
   },
