--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "9.3.5",
     "react": "16.13.1",
     "react-cloudinary": "^0.4.1",
+    "react-content-loader": "^5.1.0",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.1"
   },
