--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "json-server": "^0.16.1",
     "lodash": "^4.17.19",
     "next": "9.3.5",
+    "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-cloudinary": "^0.4.1",
     "react-content-loader": "^5.1.0",
