--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.2",
     "firebase": "^7.18.0",
     "firebase-admin": "^9.1.0",
+    "framer-motion": "^2.6.6",
     "isomorphic-unfetch": "^3.0.0",
     "json-server": "^0.16.1",
     "lodash": "^4.17.19",
@@ -27,6 +28,7 @@
     "react-cloudinary": "^0.4.1",
     "react-content-loader": "^5.1.0",
     "react-dom": "16.13.1",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
