--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-starter",
+  "name": "cirkle",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,9 +11,11 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@types/lodash": "^4.14.159",
+    "@types/mongodb": "^3.5.27",
     "@types/next": "^9.0.0",
     "@types/react": "^16.9.44",
     "@types/styled-components": "^5.1.2",
+    "@vercel/node": "^1.8.2",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.2",
     "firebase": "^7.18.0",
@@ -22,6 +24,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "json-server": "^0.16.1",
     "lodash": "^4.17.19",
+    "mongodb": "^3.6.2",
     "next": "9.3.5",
     "nprogress": "^0.2.0",
     "react": "16.13.1",
