--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-content-loader": "^5.1.0",
     "react-dom": "16.13.1",
     "react-spring": "^8.0.27",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "swr": "^0.3.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.2",
