--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.19",
     "mongodb": "^3.6.2",
     "next": "9.3.5",
+    "next-pwa": "^3.1.3",
     "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-cloudinary": "^0.4.1",
