--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,23 @@
 {
   "name": "Cirkle",
+  "short_name": "Cirkle",
+  "theme_color": "#561643",
+  "background_color": "#FDF2F5",
+  "display": "fullscreen",
+  "start_url": "https://cirkle.com.br",
   "icons": [
+    {
+      "src": "/maskable_icon.png",
+      "sizes": "830x830",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/splash-icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "density": "1.0"
+    },
     {
       "src": "/android-icon-36x36.png",
       "sizes": "36x36",
