--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "Cirkle",
   "theme_color": "#561643",
   "background_color": "#FDF2F5",
-  "display": "fullscreen",
+  "display": "standalone",
   "start_url": "https://cirkle.com.br",
   "icons": [
     {
