--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^7.18.0",
     "firebase-admin": "^9.1.0",
     "framer-motion": "^2.6.6",
+    "google-auth-library": "^6.0.6",
     "isomorphic-unfetch": "^3.0.0",
     "json-server": "^0.16.1",
     "lodash": "^4.17.19",
