--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-content-loader": "^5.1.0",
     "react-dom": "16.13.1",
     "react-spring": "^8.0.27",
+    "react-text-mask": "^5.4.3",
     "styled-components": "^5.1.1",
     "swr": "^0.3.2"
   },
