--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "json-server": "^0.16.1",
     "lodash": "^4.17.19",
+    "moment": "^2.29.0",
     "mongodb": "^3.6.2",
     "next": "9.3.5",
     "next-pwa": "^3.1.3",
