--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@testing-library/react-hooks": "^3.4.1",
     "@types/lodash": "^4.14.159",
     "@types/mongodb": "^3.5.27",
     "@types/next": "^9.0.0",
