--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-spring": "^8.0.27",
     "react-text-mask": "^5.4.3",
     "styled-components": "^5.1.1",
-    "swr": "^0.3.2"
+    "swr": "^0.3.2",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -55,6 +56,7 @@
     "@testing-library/react": "^10.4.8",
     "@types/enzyme": "^3.10.6",
     "@types/node": "^14.0.27",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "babel-jest": "^26.2.2",
