--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-text-mask": "^5.4.3",
     "styled-components": "^5.1.1",
     "swr": "^0.3.2",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -57,6 +58,7 @@
     "@types/enzyme": "^3.10.6",
     "@types/node": "^14.0.27",
     "@types/uuid": "^8.3.0",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "babel-jest": "^26.2.2",
