--- a/package.json
+++ b/package.json
@@ -13,14 +13,10 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@babel/plugin-syntax-top-level-await": "^7.10.4",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/react-hooks": "^3.4.1",
-    "@types/lodash": "^4.14.159",
-    "@types/mongodb": "^3.5.27",
-    "@types/next": "^9.0.0",
-    "@types/react": "^16.9.44",
-    "@types/styled-components": "^5.1.2",
     "@vercel/node": "^1.8.2",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.2",
@@ -29,11 +25,12 @@
     "framer-motion": "^2.6.6",
     "google-auth-library": "^6.0.6",
     "isomorphic-unfetch": "^3.0.0",
+    "js-levenshtein": "^1.1.6",
     "json-server": "^0.16.1",
     "lodash": "^4.17.19",
     "moment": "^2.29.0",
     "mongodb": "^3.6.2",
-    "next": "9.3.5",
+    "next": "^9.5.3",
     "next-pwa": "^3.1.3",
     "nprogress": "^0.2.0",
     "react": "16.13.1",
@@ -49,6 +46,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-async-generator-functions": "^7.10.5",
+    "@babel/plugin-proposal-dynamic-import": "^7.10.4",
+    "@babel/plugin-proposal-json-strings": "^7.10.4",
+    "@babel/plugin-transform-async-to-generator": "^7.10.4",
+    "@babel/plugin-transform-block-scoped-functions": "^7.10.4",
     "@storybook/addon-actions": "^6.0.21",
     "@storybook/addon-essentials": "^6.0.21",
     "@storybook/addon-links": "^6.0.21",
@@ -56,7 +58,12 @@
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.8",
     "@types/enzyme": "^3.10.6",
+    "@types/lodash": "^4.14.159",
+    "@types/mongodb": "^3.5.27",
+    "@types/next": "^9.0.0",
     "@types/node": "^14.0.27",
+    "@types/react": "^16.9.44",
+    "@types/styled-components": "^5.1.2",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
