--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/react-hooks": "^3.4.1",
+    "@types/react-datepicker": "^3.1.1",
     "@vercel/node": "^1.8.2",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.2",
+    "date-fns": "^2.16.1",
     "firebase": "^7.18.0",
     "firebase-admin": "^9.1.0",
     "framer-motion": "^2.6.6",
@@ -36,6 +38,7 @@
     "react": "16.13.1",
     "react-cloudinary": "^0.4.1",
     "react-content-loader": "^5.1.0",
+    "react-datepicker": "^3.2.2",
     "react-dom": "16.13.1",
     "react-spring": "^8.0.27",
     "react-text-mask": "^5.4.3",
