--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "js-levenshtein": "^1.1.6",
     "json-server": "^0.16.1",
     "lodash": "^4.17.19",
+    "material-ui-popup-state": "^1.7.0",
     "moment": "^2.29.0",
     "mongodb": "^3.6.2",
     "next": "^9.5.3",
