--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-content-loader": "^5.1.0",
     "react-datepicker": "^3.2.2",
     "react-dom": "16.13.1",
+    "react-markdown": "^4.3.1",
     "react-spring": "^8.0.27",
     "react-text-mask": "^5.4.3",
     "styled-components": "^5.1.1",
