Social share buttons

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "16.13.1",
     "react-image-magnify": "^2.7.4",
     "react-markdown": "^4.3.1",
+    "react-share": "^4.3.1",
     "react-spring": "^8.0.27",
     "react-text-mask": "^5.4.3",
     "styled-components": "^5.1.1",
@@ -69,6 +70,7 @@
     "@types/next": "^9.0.0",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-image-magnify": "^2.7.0",
     "@types/styled-components": "^5.1.2",
     "@types/uuid": "^8.3.0",
