--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "babel-jest": "^26.2.2",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.1",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
     "eslint": "^7.6.0",
@@ -93,6 +94,7 @@
     "prettier": "^2.0.5",
     "react-is": "^16.13.1",
     "ts-jest": "^26.3.0",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "webpack-bundle-analyzer": "^3.9.0"
   }
 }
