Purchase animation with lottie

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-datepicker": "^3.2.2",
     "react-dom": "^17.0.1",
     "react-image-magnify": "^2.7.4",
+    "react-lottie": "^1.2.3",
     "react-markdown": "^4.3.1",
     "react-share": "^4.3.1",
     "react-spring": "^8.0.27",
@@ -76,6 +77,7 @@
     "@types/react-credit-cards": "^0.8.0",
     "@types/react-helmet": "^6.1.0",
     "@types/react-image-magnify": "^2.7.0",
+    "@types/react-lottie": "^1.2.5",
     "@types/react-text-mask": "^5.4.6",
     "@types/styled-components": "^5.1.2",
     "@types/uuid": "^8.3.0",
