--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-credit-cards": "^0.8.3",
     "react-datepicker": "^3.2.2",
     "react-dom": "^17.0.1",
+    "react-highlight-words": "^0.17.0",
     "react-image-magnify": "^2.7.4",
     "react-lottie": "^1.2.3",
     "react-markdown": "^4.3.1",
