--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/react": "^16.9.44",
     "@types/react-credit-cards": "^0.8.0",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-highlight-words": "^0.16.1",
     "@types/react-image-magnify": "^2.7.0",
     "@types/react-lottie": "^1.2.5",
     "@types/react-text-mask": "^5.4.6",
