--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/plugin-syntax-top-level-await": "^7.10.4",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/data-grid": "^4.0.0-alpha.28",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/react-hooks": "^3.4.1",
     "@types/react-datepicker": "^3.1.1",
@@ -32,6 +33,7 @@
     "json-server": "^0.16.1",
     "lodash": "^4.17.19",
     "material-ui-popup-state": "^1.7.0",
+    "md5": "^2.3.0",
     "moment": "^2.29.0",
     "mongodb": "^3.6.2",
     "next": "^10.0.2",
@@ -71,6 +73,7 @@
     "@types/cleave.js": "^1.4.4",
     "@types/enzyme": "^3.10.6",
     "@types/lodash": "^4.14.159",
+    "@types/md5": "^2.3.0",
     "@types/mongodb": "^3.5.27",
     "@types/next": "^9.0.0",
     "@types/node": "^14.0.27",
