--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-share": "^4.3.1",
     "react-spring": "^8.0.27",
     "react-text-mask": "^5.4.3",
+    "slugify": "^1.5.3",
     "styled-components": "^5.1.1",
     "swr": "^0.3.2",
     "uuid": "^8.3.0",
